# OpenGL-boilerplate

./: CMakeLists.txt  README.md  main.cpp
